# liboqs-rust

./: .gitmodules  search-index.js  settings.html
.github/workflows/: ci.yml
cstr_core/: all.html  index.html  struct.CStr.html  struct.CString.html  struct.FromBytesWithNulError.html  struct.IntoStringError.html  struct.NulError.html  type.c_char.html
oqs/: Cargo.toml  all.html  enum.Error.html  fn.init.html  index.html  macro.newtype_buffer.html  type.Result.html
oqs-sys/: Cargo.toml  build.rs
oqs/kem/: enum.Algorithm.html  index.html  struct.Ciphertext.html  struct.CiphertextRef.html  struct.Kem.html  struct.PublicKey.html  struct.PublicKeyRef.html  struct.SecretKey.html  struct.SecretKeyRef.html  struct.SharedSecret.html  struct.SharedSecretRef.html
oqs/sig/: enum.Algorithm.html  index.html  struct.PublicKey.html  struct.PublicKeyRef.html  struct.SecretKey.html  struct.SecretKeyRef.html  struct.Sig.html  struct.Signature.html  struct.SignatureRef.html  type.Message.html
oqs/src/: kem.rs  sig.rs
oqs_sys/: all.html  index.html
oqs_sys/common/: constant.OQS_BUILD_ONLY_LIB.html  constant.OQS_COMPILE_BUILD_TARGET.html  constant.OQS_ENABLE_KEM_BIKE.html  constant.OQS_ENABLE_KEM_CLASSIC_MCELIECE.html  constant.OQS_ENABLE_KEM_FRODOKEM.html  constant.OQS_ENABLE_KEM_HQC.html  constant.OQS_ENABLE_KEM_KYBER.html  constant.OQS_ENABLE_KEM_NTRU.html  constant.OQS_ENABLE_KEM_bike_l1.html  constant.OQS_ENABLE_KEM_bike_l3.html  constant.OQS_ENABLE_KEM_classic_mceliece_348864.html  constant.OQS_ENABLE_KEM_classic_mceliece_348864_avx.html  constant.OQS_ENABLE_KEM_classic_mceliece_348864f.html  constant.OQS_ENABLE_KEM_classic_mceliece_348864f_avx.html  constant.OQS_ENABLE_KEM_classic_mceliece_460896.html  constant.OQS_ENABLE_KEM_classic_mceliece_460896_avx.html  constant.OQS_ENABLE_KEM_classic_mceliece_460896f.html  constant.OQS_ENABLE_KEM_classic_mceliece_460896f_avx.html  constant.OQS_ENABLE_KEM_classic_mceliece_6688128.html  constant.OQS_ENABLE_KEM_classic_mceliece_6688128_avx.html  constant.OQS_ENABLE_KEM_frodokem_1344_aes.html  (+164 more)
serde/: trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
(+751 files in other folders)
