[package]
name = "oqs"
version = "0.7.2"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2021"
description = "A Rusty interface to Open-Quantum-Safe's liboqs"
readme = "../README.md"
repository = "https://github.com/open-quantum-safe/liboqs-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
cstr_core = { version = "0.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }

[dependencies.oqs-sys]
path = "../oqs-sys"
version = "0.7.2-rc2"
default-features = false

[dev-dependencies]
rand = "0.8.5"

[features]
default = ["oqs-sys/openssl", "kems", "sigs", "std"]
std = []
non_portable = ["oqs-sys/non_portable"]

# algorithms: KEMs
kems = ["kyber", "classic_mceliece"]
kyber = ["oqs-sys/kyber"]
classic_mceliece = ["oqs-sys/classic_mceliece"]
# algorithms: Signature schemes
sigs = ["dilithium"]
dilithium = ["oqs-sys/dilithium"]
